<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">网络电台</string>
    <string name="add_station">添加电台</string>
    <string name="delete_station">删除电台</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="station_name">电台名称</string>
    <string name="station_url">电台地址</string>
    <string name="volume">音量</string>
    <string name="status">状态</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="select_station_to_play">请先选择要播放的电台</string>
    <string name="playing">正在播放</string>
    <string name="buffering">缓冲中...</string>
    <string name="paused">已暂停</string>
    <string name="stopped">已停止</string>
    <string name="error">错误</string>
</resources>
